--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,11 @@
 
 body {
     color: var(--text-color);
+    font-family: roboto, sans-serif;
+}
+
+ul {
+list-style: none;
 }
 /* Header */
 .logo-accent {
@@ -17,15 +22,29 @@ body {
 }
 
 .logo-link {
-    color:var(--title-color)
+    color:var(--title-color);
+
+    font-family: raleway, sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    text-decoration: none;
 }
 
 .nav {
     color: var(--title-color);
+
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    list-style: none;
 }
 
 .nav-link {
     color: inherit;
+    text-decoration: none;
 }
 
 .nav-link:hover, .nav-link:focus, .header-contacts:hover, .header-contacts:focus {
@@ -33,7 +52,13 @@ body {
 }
 
 .header-contacts {
-    color:var(--text-color)
+    color:var(--text-color);
+
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
 }
 
 .current-link {
@@ -47,19 +72,50 @@ body {
 
 .hero-title {
     color: var(--hero-color);
+
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
 }
 
 .button {
     color: var(--hero-color);
     background-color: var(--brand-color);
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    text-align: center;
+    letter-spacing: 0.06em;
+
+    cursor: pointer;
 }
 
 /*Our features */
 .features {
     background-color: var(--main-background);
 }
+.features-list {
+    list-style: none;
+}
+
 .features-title {
     color: var(--title-color);
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+.features-text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
 }
 
 /*Activity*/
@@ -69,6 +125,16 @@ body {
 
  .activity-title {
      color: var(--title-color);
+
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+ }
+
+ .activity-list {
+    list-style: none;
  }
 
  /* Team */
@@ -78,10 +144,34 @@ body {
 
 .team-title {
     color: var(--title-color);
+
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+
+.team-list {
+    list-style: none;
 }
 
 .teammate-name {
     color: var(--title-color);
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+
+.teammate-post {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
 }
 
 /* Footer */
@@ -91,14 +181,28 @@ body {
 
 .footer-logo {
     color: #FFFFFF;
+
+    font-family: raleway, sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    text-decoration: none;
 }
 
 .address {
     color: #FFFFFF;
+
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
 }
 
 .footer-contacts {
-    color: rgba(255, 255, 255, 0.6)
+    color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
 }
 
 .footer-contacts:hover, .footer-contacts:focus {
@@ -106,17 +210,42 @@ body {
 }
 /* Portfolio.html */
 /*Projects */
-.projects-link {
+.projects-button {
     color: var(--title-color);
     background-color: #F5F4FA;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
 }
 
-.projects-link:hover, .projects-link:focus {
+.projects-filter {
+    list-style: none;
+}
+
+.projects-button:hover, .projects-button:focus {
     color: var(--hero-color);
     background-color: var(--brand-color);
     cursor: pointer;
 }
+.projects-list {
+    list-style: none;
+}
 
 .project-name {
     color: var(--title-color);
+
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+}
+
+.project-type {
+font-weight: 400;
+font-size: 16px;
+line-height: 1.87;
+letter-spacing: 0.03em;
 }
